RESOLVED FIXED178398
Corrupted image after looping movie-backed <img>.
https://bugs.webkit.org/show_bug.cgi?id=178398
Summary Corrupted image after looping movie-backed <img>.
Jer Noble
Reported 2017-10-17 10:35:18 PDT
Corrupted image after looping movie-backed <img>.
Attachments
Patch (2.00 KB, patch)
2017-10-17 10:38 PDT, Jer Noble
no flags
Patch (2.55 KB, patch)
2017-10-17 10:48 PDT, Jer Noble
no flags
Radar WebKit Bug Importer
Comment 1 2017-10-17 10:37:23 PDT
Jer Noble
Comment 2 2017-10-17 10:38:44 PDT
Jer Noble
Comment 3 2017-10-17 10:48:00 PDT
Eric Carlson
Comment 4 2017-10-17 11:46:19 PDT
Comment on attachment 324028 [details] Patch rs=me
WebKit Commit Bot
Comment 5 2017-10-17 11:53:56 PDT
Comment on attachment 324028 [details] Patch Clearing flags on attachment: 324028 Committed r223564: <https://trac.webkit.org/changeset/223564>
WebKit Commit Bot
Comment 6 2017-10-17 11:53:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.